tests/base/parser/bad/exps/exp_t-fun-lparen-id-colon-tid-rparen-with.scilexp
fun (x: Bool) -> x (* wrong arrow, should be '=>' *)
